# EZTrans

./: .gitignore  README.md  eztrans.spec  pyproject.toml
docs/: architecture.md
installer/: eztrans.iss
resources/: seed_examples.json
scripts/: build-release.ps1  run.ps1  test.ps1
src/eztrans/: __init__.py  __main__.py  config.py  constants.py  gui.py  models.py  runtime.py  settings.py  utils.py
src/eztrans.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eztrans/services/: __init__.py  dictionary_db.py  example_service.py  importers.py  resource_manager.py  speech_service.py  translation_service.py  update_service.py
tests/: test_history.py  test_importers.py  test_resource_manager.py  test_settings.py  test_translation_service.py  test_utils.py
