[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eztrans"
version = "0.1.1"
description = "Offline-first lightweight desktop translator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Liang Zhenkun", email = "zhenkun_liang@163.com" }]
dependencies = [
  "argostranslate>=1.11.0",
  "requests>=2.32.0",
  "platformdirs>=4.3.0",
  "pyttsx3>=2.99",
  "pystray>=0.19.5",
  "pillow>=11.0.0",
  "keyboard>=0.13.5",
  "langdetect>=1.0.9",
  "piper-tts>=1.4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
eztrans = "eztrans.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
